--- a/eShop.AdminApp/Views/Login/Index.cshtml
+++ b/eShop.AdminApp/Views/Login/Index.cshtml
@@ -80,7 +80,7 @@
                 <!-- /.social-auth-links -->
 
                 <p class="mb-1">
-                    <a href="/User/ForgotPassword">Quên mật khẩu</a>
+                    <a href="/Login/ForgotPassword">Quên mật khẩu</a>
                 </p>
                 <p class="mb-0">
                     <a href="register.html" class="text-center">Liên hệ quản trị</a>
