--- a/eShop.AdminApp/Views/Product/Create.cshtml
+++ b/eShop.AdminApp/Views/Product/Create.cshtml
@@ -53,17 +53,17 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Price" class="control-label"></label>
-                        <input asp-for="Price" type="number" class="form-control" />
+                        <input asp-for="Price"  class="form-control InputAddingCommas" />
                         <span asp-validation-for="Price" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="OriginalPrice" class="control-label"></label>
-                        <input asp-for="OriginalPrice" type="number" class="form-control" />
+                        <input asp-for="OriginalPrice"  class="form-control InputAddingCommas" />
                         <span asp-validation-for="OriginalPrice" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Stock" class="control-label"></label>
-                        <input asp-for="Stock" type="number" class="form-control" />
+                        <input asp-for="Stock" class="form-control" />
                         <span asp-validation-for="Stock" class="text-danger"></span>
                     </div>
 
