--- a/eShop.AdminApp/Views/Product/Edit.cshtml
+++ b/eShop.AdminApp/Views/Product/Edit.cshtml
@@ -56,17 +56,17 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Price" class="control-label"></label>
-                        <input asp-for="Price" data-type="number" type="text" class="form-control AddingCommas" />
+                        <input asp-for="Price" data-type="number" class="form-control InputAddingCommas" />
                         <span asp-validation-for="Price" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="OriginalPrice" class="control-label"></label>
-                        <input asp-for="OriginalPrice" data-type="number" type="text" class="form-control AddingCommas" />
+                        <input asp-for="OriginalPrice" data-type="number" class="form-control InputAddingCommas" />
                         <span asp-validation-for="OriginalPrice" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Stock" class="control-label"></label>
-                        <input asp-for="Stock" data-type="number" type="text" class="form-control AddingCommas" />
+                        <input asp-for="Stock" data-type="number" class="form-control" />
                         <span asp-validation-for="Stock" class="text-danger"></span>
                     </div>
                     <div class="form-group">
