--- a/eShop.AdminApp/Views/User/EnableAuthenticator.cshtml
+++ b/eShop.AdminApp/Views/User/EnableAuthenticator.cshtml
@@ -1,4 +1,4 @@
-﻿@model eShop.ViewModels.System.Auth.EnableAuthenticatorViewModel
+﻿@model EnableAuthenViewModel
 @{
     ViewData["Title"] = "EnableAuthenticator";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -70,10 +70,10 @@
                             </p>
                         </li>
                         <li>
-                            <p>Scan the QR Code or enter this key <kbd>@Model.SharedKey</kbd> into your two factor authenticator app. Spaces and casing do not matter.</p>
+                            <p>Scan the QR Code or enter this key <kbd>@Model.EnableAuthenticatorViewModel.SharedKey</kbd> into your two factor authenticator app. Spaces and casing do not matter.</p>
                             <div class="alert alert-info">Learn how to <a href="https://go.microsoft.com/fwlink/?Linkid=852423">enable QR code generation</a>.</div>
                             <div id="qrCode"></div>
-                            <div id="qrCodeData" data-url="@Html.Raw(@Model.AuthenticatorUri)"></div>
+                            <div id="qrCodeData" data-url="@Html.Raw(@Model.EnableAuthenticatorViewModel.AuthenticatorUri)"></div>
                         </li>
                         <li>
                             <p>
@@ -82,15 +82,15 @@
                             </p>
                             <div class="row">
                                 <div class="col-md-6">
-                                    @*<form id="send-code" method="post">
-                                            <div class="form-group">
-                                                <label asp-for="Input.Code" class="control-label">Verification Code</label>
-                                                <input asp-for="Input.Code" class="form-control" autocomplete="off" />
-                                                <span asp-validation-for="Input.Code" class="text-danger"></span>
-                                            </div>
-                                            <button type="submit" class="btn btn-primary">Verify</button>
-                                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                        </form>*@
+                                    <form id="send-code" asp-action="EnableAuthenticator" method="post">
+                                        <div asp-validation-summary="All" class="text-danger"></div>
+                                        <div class="form-group">
+                                            <label asp-for="EnableAuthenticatorRequest.Input.Code" class="control-label">Verification Code</label>
+                                            <input asp-for="EnableAuthenticatorRequest.Input.Code" required class="form-control" />
+                                            <span asp-validation-for="EnableAuthenticatorRequest.Input.Code" class="text-danger"></span>
+                                        </div>
+                                        <button type="submit" class="btn btn-primary">Verify</button>
+                                    </form>
                                 </div>
                             </div>
                         </li>
@@ -100,4 +100,3 @@
         </div>
     </section>
 </div>
-
