--- a/eShop.AdminApp/Views/User/Index.cshtml
+++ b/eShop.AdminApp/Views/User/Index.cshtml
@@ -9,7 +9,7 @@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    
+
     <script>
         setTimeout(function () {
             $('#msgAlert').fadeOut('slow');
@@ -21,6 +21,7 @@
         var site = new UserController();
         site.initialize();
     </script>
+    <link rel="stylesheet" href="/css/TichXanh.css">
 }
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -114,13 +115,38 @@
                                 <td>
 
                                     @Html.DisplayFor(modelItem => item.Email)
+                                    &nbsp;   &nbsp;
+                                    @if (item.EmailConfirmed)
+                                    {
+                                        <div class="EmailVerified">
+
+                                            <div class="tooltip">
+                                                <span class="verified-EmailVerified-icon">
+
+                                                    <svg focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+
+                                                        <path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z">
+                                                        </path>
+                                                    </svg>
+                                                </span>
+                                                <span class="tooltiptext">Email đã được xác minh</span>
+                                            </div>
+                                        </div>
+                                    }
                                 </td>
                                 <td>
 
                                     @{
                                         if (item.LockoutEnabled)
                                         {
-                                            <span class="Lockout badge bg-red" data-id="@item.Id">Locked</span>
+                                            <span class="Lockout badge bg-red" data-id="@item.Id">
+                                                Locked
+                                            </span>
+                                            <div class="tooltip">
+                                                ...
+                                                <span class="tooltiptext">@item.LockoutEnd</span>
+                                            </div>
+
                                         }
                                         else
                                         {
