--- a/eShop.AdminApp/Views/User/TwoFactorAuthentication.cshtml
+++ b/eShop.AdminApp/Views/User/TwoFactorAuthentication.cshtml
@@ -48,8 +48,8 @@
                             <button type="submit" class="btn btn-default">Forget this browser</button>
                         </form>
                     }
-                    <a asp-page="./Disable2fa" class="btn btn-default">Disable 2FA</a>
-                    <a asp-page="./GenerateRecoveryCodes" class="btn btn-default">Reset recovery codes</a>
+                    <a asp-action="Disable2fa" class="btn btn-default">Disable 2FA</a>
+                    <a asp-action="GenerateRecoveryCodes" class="btn btn-default">Reset recovery codes</a>
                 }
 
                 <h5>Authenticator app</h5>
@@ -59,7 +59,7 @@
                 }
                 else
                 {
-                    <a id="enable-authenticator" class="btn btn-default">Setup authenticator app</a>
+                    <a id="enable-authenticator" asp-action="EnableAuthenticator" class="btn btn-default">Setup authenticator app</a>
                     <a id="reset-authenticator" class="btn btn-default">Reset authenticator app</a>
                 }
             </div>
