Update-Code-Backend-FrontEnd

--- a/eShop.AdminApp/Views/Category/Create.cshtml
+++ b/eShop.AdminApp/Views/Category/Create.cshtml
@@ -31,12 +31,12 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1>Thêm mới Sản phẩm</h1>
+                    <h1>Thêm mới danh mục Sản phẩm</h1>
                 </div>
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item"><a href="/">Home</a></li>
-                        <li class="breadcrumb-item active">Thêm mới Sản phẩm</li>
+                        <li class="breadcrumb-item active">Thêm mới danh mục Sản phẩm</li>
                     </ol>
                 </div>
             </div>
