--- a/eShop.AdminApp/Views/Order/Delete.cshtml
+++ b/eShop.AdminApp/Views/Order/Delete.cshtml
@@ -29,7 +29,7 @@
         <div class="card">
             <div class="card-header">
                 <div>
-                    <a class="btn btn-success" asp-action="Delete" asp-controller="Order">Về Danh Sách</a>
+                    <a class="btn btn-success" asp-action="Index" asp-controller="Order">Về Danh Sách</a>
                 </div>
                 <hr />
                 <dl class="row">
