--- a/eShop.WebApp/Views/Shared/_Layout.cshtml
+++ b/eShop.WebApp/Views/Shared/_Layout.cshtml
@@ -176,7 +176,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="404.html">404</a></li>
-                                <li><a href="contact-us.html">Contact</a></li>
+                                <li><a asp-controller="Contact" asp-action="create">Contact</a></li>
                             </ul>
                         </div>
                     </div>
